// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationAvatar
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
        "projectVisibility": "public",
      }
    }
  />
  <span
    className="spacer-left"
  >
    Foo
  </span>
</header>
`;

exports[`renders dropdown 1`] = `
<Dropdown
  className="display-inline-block"
  overlay={
    <ul
      className="menu"
    >
      <OrganizationListItem
        organization={
          Object {
            "actions": Object {
              "admin": true,
            },
            "key": "org1",
            "name": "org1",
            "projectVisibility": "public",
          }
        }
      />
      <OrganizationListItem
        organization={
          Object {
            "actions": Object {
              "admin": false,
            },
            "key": "org2",
            "name": "org2",
            "projectVisibility": "public",
          }
        }
      />
    </ul>
  }
>
  <a
    className="display-inline-flex-center spacer-left link-base-color link-no-underline"
    href="#"
  >
    Foo
    <DropdownIcon
      className="little-spacer-left"
    />
  </a>
</Dropdown>
`;

exports[`renders for external user w/o alm integration 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationAvatar
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
        "projectVisibility": "public",
      }
    }
  />
  <span
    className="spacer-left"
  >
    Foo
  </span>
  <Tooltip
    mouseLeaveDelay={0.25}
    overlay={
      <React.Fragment>
        <p>
          organization.not_bound_to_x.github
        </p>
        <hr
          className="spacer-top spacer-bottom"
        />
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/organizations/foo/edit"
        >
          organization.go_to_settings_to_bind
        </Link>
      </React.Fragment>
    }
  >
    <img
      alt="github"
      className="text-middle spacer-left"
      height={16}
      src="/images/sonarcloud/github-unbound.svg"
      width={16}
    />
  </Tooltip>
</header>
`;

exports[`renders with alm integration 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationAvatar
    organization={
      Object {
        "alm": Object {
          "key": "github",
          "membersSync": false,
          "url": "https://github.com/foo",
        },
        "key": "foo",
        "name": "Foo",
        "projectVisibility": "public",
      }
    }
  />
  <span
    className="spacer-left"
  >
    Foo
  </span>
  <Tooltip
    mouseLeaveDelay={0.25}
    overlay={
      <React.Fragment>
        <p>
          organization.bound_to_x.github
        </p>
        <hr
          className="spacer-top spacer-bottom"
        />
        <a
          href="https://github.com/foo"
          rel="noopener noreferrer"
          target="_blank"
        >
          organization.see_on_x.github
        </a>
      </React.Fragment>
    }
  >
    <img
      alt="github"
      className="text-middle spacer-left"
      height={16}
      src="/images/sonarcloud/github.svg"
      width={16}
    />
  </Tooltip>
</header>
`;
